DOCS: Testing - browser testing added to index results. STLYE: Image-rendering property added for img tags found from testing. FIX: col-sm-* changed to col-* to fix layout issues.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,10 @@ a , a:hover {
     text-decoration: none;
 }
 
+img {
+    image-rendering: -webkit-optimize-contrast;
+}
+
 /* Backgrounds */
 .bg-offwhite {
     background-color: #f0f6f7;
